correct typo in desc

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: rjd3jars
-Title: External jars for rjdverse R packages
+Title: External jars for 'rjdverse' R packages
 Version: 0.0.1
 Authors@R: 
     person(given = "Tanguy", 
            family = "Barthelemy", role = c("aut", "cre"),
            email ="tanguy.barthelemy@insee.fr")
-Description: It provides external jars required for the rjdverse (as'rjd3toolkit', 'rjd3x13' and 'rjd3tramoseats').
+Description: It provides external jars required for the 'rjdverse' (as 'rjd3toolkit', 'rjd3x13' and 'rjd3tramoseats').
 Depends:
     R (>= 4.1)
 Imports:
